# ml-loop

./: .gitignore  .pre-commit-config.yaml  ACKNOWLEDGEMENTS.md  LICENSE  README.md  pyproject.toml
data/appworld_splits/: denylist.txt  dev.txt  test_challenge.txt  test_challenge_difficulty_1.txt  test_challenge_difficulty_2.txt  test_challenge_difficulty_3.txt  test_normal.txt  train.txt  train_difficulty_1.txt  train_difficulty_2.txt
phi_agents/agent/: minimal_vllm_react_agent.py  react_template.py
phi_agents/appworld/: README.md  interface.py  server.py  setup_appworld.sh
phi_agents/evals/: appworld_evals.py  appworld_rl_eval.py  appworld_rollout_data.py  html_utils.py
phi_agents/inference/: config.py
phi_agents/rl/: README.md  appworld_scenario_runner.py  callbacks.py  cloud_checkpointer.py  config.py  eval.py  parallel_scenario_sampler.py  rl_utils.py  train.py  type_defs.py  vllm_client.py  vllm_rollout_worker.py
phi_agents/rl/conf/: accelerate_config.yaml  appworld_eval.yaml  config.yaml
phi_agents/rl/conf/appworld/: debug.yaml  default.yaml
phi_agents/rl/conf/appworld/agent/: default.yaml
phi_agents/rl/conf/global/: appworld.yaml
phi_agents/rl/conf/llm/: qwen_2_5_32b_eval.yaml  qwen_2_5_32b_train.yaml  qwen_2_5_7b_eval.yaml  qwen_2_5_7b_train.yaml  qwen_3_32b_eval.yaml  qwen_3_32b_train.yaml  qwen_3_8b_eval.yaml  qwen_3_8b_train.yaml
phi_agents/rl/conf/rl/gpu_allocation/: four_learn_four_infer.yaml  one_learn_one_infer.yaml  single_gpu.yaml
phi_agents/rl/conf/rl/optimization/: adamw_const_lr.yaml
phi_agents/rl/conf/rl/params/: debug.yaml  default.yaml
phi_agents/rl/conf/rl/scenario_sampler/: appworld_dev.yaml  appworld_syntheticv4.yaml  appworld_train.yaml  appworld_train12.yaml  appworld_train12_syntheticv4.yaml
phi_agents/rl/llm/: __init__.py  base_llm.py  qwen_25.py  qwen_3.py
phi_agents/rl/utils/: download.py  fsdp2_utils.py  ray_utils.py
phi_agents/utils/: appworld.py  cattrs_conversion.py  cce.py  cuda.py  file_utils.py  futures_utils.py  logger.py  network_utils.py  profiling.py  typed_fire.py  utils.py
phi_agents/visualization/: episodes.py  rollouts.py
phi_agents/vllm/: vllm_server.py
scripts/: appworld_eval_parse_and_log.py  appworld_phi_data.py  appworld_play.sh  run_appworld_inference.py  torch_dist_healthcheck.py  visualize_appworld_queries.py  visualize_episodes.py  write_appworld_task_ids.py
